[gd_scene load_steps=6 format=3 uid="uid://c2ef5dmseh0l2"]

[ext_resource type="Texture2D" uid="uid://b6wdd3f66qbbs" path="res://Assets/menu/back_button.png" id="1"]
[ext_resource type="Script" path="res://Scripts/DebugLevelSelect.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://d203ga3jkuh5h" path="res://Assets/menu/menu1.png" id="3"]
[ext_resource type="AudioStream" uid="uid://dgsmo8h0gdfme" path="res://Assets/BGM/bgm-0.mp3" id="4"]
[ext_resource type="AudioStream" uid="uid://23ogjii7k82d" path="res://Assets/SFX/button-press.wav" id="5"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Panel" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 128.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3")
ignore_texture_size = true

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -464.0
offset_top = -288.0
offset_right = 392.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
columns = 8

[node name="TextureButton" type="TextureButton" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -128.0
offset_right = 144.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("1")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
